--- a/index.html
+++ b/index.html
@@ -122,6 +122,53 @@
                 </div>
                
         </section>
+              
+        <!-- News i formularz -->
+
+        <section class="newsform">
+            <div class="news">
+                <div class="news-part part1">
+                    <div class="picture">
+                        <img src="src/face2.jpg" alt="face2">
+                    </div>
+                    <div class="news-text">
+                        <div class="newsform-title">
+                            <h2>Sed ut turpis eu nisl facilisis consectetur</h2>
+                            <h3> Donec mollis, metus eu iaculis laoreet, ante est egestas lacus.</h3>
+                        </div>
+                        Sed ut turpis eu nisl facilisis consectetur sodales at nulla. Aenean rhoncus cursus neque non pretium. Phasellus at lacus sit amet quam blandit pulvinar. Duis scelerisque orci nulla.
+                        <a href="#"><div class="news-more">MORE<i class="fa fa-arrow-right u-marginLeft--sm"></i></div></a>
+                    </div> 
+                </div>
+                <div class="news-part part2">
+                    <div class="picture">
+                        <img src="src/face1.jpg" alt="face1">
+                    </div>
+                    <div class="news-text">
+                        <div class="newsform-title">
+                            <h2>Sed ut turpis eu nisl facilisis consectetur</h2>
+                            <h3> Donec mollis, metus eu iaculis laoreet, ante est egestas lacus.</h3>
+                        </div>
+                        Sed ut turpis eu nisl facilisis consectetur sodales at nulla. Aenean rhoncus cursus neque non pretium. Phasellus at lacus sit amet quam blandit pulvinar. Duis scelerisque orci nulla. 
+                        <a href="#"><div class="news-more">MORE<i class="fa fa-arrow-right u-marginLeft--sm"></i></div></a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="form">
+                        <div class="form-title-container">
+                                <div class="form-icon-container"><i class="fa fa-pen"></i></div>
+                            <div class="newsform-title"><h2>Vestibulum auctor</h2><h3>Morbi interdum mollis sapien ed</h3></div>
+                        </div>                    
+                    <form action="#" method="#">         
+                      <input type="text" placeholder="Your name.." id="name" required><br />          
+                      <input type="email" placeholder="Your email id.." id="email" required><br />
+                      <input type="number" placeholder="Your phone.." id="phone" required><br />
+                      <textarea id="massage" rows="5" cols="30" placeholder="Your massage.."></textarea><br />
+                      <button type="submit">SEND <i class="fa fa-arrow-right u-marginLeft--sm"></i></button>
+                    </form>
+            </div>
+          </section>
     </div>
   <footer>
         <div class="footer_list">
