--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                       <input type="email" placeholder="Your email id.." id="email" required><br />
                       <input type="number" placeholder="Your phone.." id="phone" required><br />
                       <textarea id="massage" rows="5" cols="30" placeholder="Your massage.."></textarea><br />
-                      <button type="submit">SEND <i class="fa fa-arrow-right u-marginLeft--sm"></i></button>
+                      <button type="submit" class="button1">SEND <i class="fa fa-arrow-right u-marginLeft--sm"></i></button>
                     </form>
             </div>
           </section>
